<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dip"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/background_gray"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/btnClose"
        android:layout_width="30dip"
        android:layout_height="30dip"
        android:layout_gravity="right"
        android:layout_margin="8dip"
        android:background="@drawable/btn_close" >
    </Button>
    
    <TextView
        android:id="@+id/txtChooseDremboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center_vertical"
        android:text="@string/text_choose_dremboard"
        android:textSize="14sp" >
	 </TextView>

     <Spinner
        android:id="@+id/spinCategory"
        android:layout_width="180dip"
        android:layout_height="36dip"
		android:layout_marginLeft="20dp"
		android:layout_marginTop="8dp"
        android:background="@drawable/bg_spinner"
        android:gravity="center_vertical"
        android:paddingLeft="10dip"
        android:textColor="@color/lightgray2" />
           
       <TextView
        android:id="@+id/txtNewDremboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:linksClickable="true"
        android:layout_marginTop="18dip"
        android:layout_marginLeft="20dip"
        android:text="@string/text_new_dremboard"
        android:textSize="14sp" >
	 </TextView>

	<Button
        android:id="@+id/btnNewDremboard"
        android:layout_width="120dip"
        android:layout_height="30dip"
        android:layout_gravity="right"
        android:layout_marginRight="10dip"
        android:layout_marginBottom="10dip"
        android:background="@drawable/btn_register"
        android:gravity="center"
        android:text="@string/btn_new_dremboard"
        android:textColor="@color/white"
        android:textSize="12sp" />
       
  <Button
        android:id="@+id/btnAddDremboard"
        android:layout_width="100dip"
        android:layout_height="30dip"
        android:background="@drawable/btn_login"
        android:gravity="center"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="16dip"
        android:text="@string/btn_add_dremboard"
        android:textColor="@color/white"
        android:textSize="12sp" />

</LinearLayout>